# movemap

./: .gitmodules  README.md  movemap.code-workspace  release.json
.github/workflows/: release.yml
docs/: lpp-template-schema.json  rnbo-move-architecture.md  rnbo-runner-plan.md
movemap-runner/: .gitignore  Cargo.toml  Cross.toml  README.md  runner.json
movemap-runner/src/: audio.rs  config.rs  js_host.rs  main.rs  midi.rs  notify.rs
scripts/: browse_devices.mjs  build.sh  generate_yurs_map.mjs  run_tests.sh
src/: midi_utils.mjs  module.json  move_virtual_knobs.mjs  params.mjs  ui.mjs
src/config/: custom_banks.json  movemap_config.mjs
tests/: test_ableton_state.mjs  test_bank_switching.mjs  test_sysex.mjs  test_virtual_knobs.mjs
tests/harness/: assert.mjs  host_mock.mjs
